syntax = "proto3";

option go_package = "moris/helloworld";
option java_multiple_files = true;
option java_package = "com.example.demo";
option java_outer_classname = "HelloWorldProto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}